CB-3291 Created node state change tracking on periscope side